welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
def peindreSol(c: Color) {
  setCouleurBrosse(c)
  
  // On marque le sol.
  baisseBrosse()
  leveBrosse()
}

def dessineV(c: Color) {
  avance()
  peindreSol(c)
  
  for (compteur <- 1 to 2) {
    gauche()
    avance()
  }
  
  peindrreSol(c)
  
  gauche()
  avance()
  gauche()
}

override def run() {
  dessineV(Color.RED)
}
